--- a/udaya/package.json
+++ b/udaya/package.json
@@ -19,6 +19,10 @@
     "@nostr-dev-kit/ndk": "^2.0.3",
     "@nostr-dev-kit/ndk-cache-dexie": "^2.0.3",
     "@tanstack/react-query": "^4.35.0",
+    "@unipasswallet/popup-types": "^1.1.11",
+    "@unipasswallet/web3-react": "^1.1.9",
+    "@web3-react/core": "8.0.35-beta.0",
+    "@web3-react/types": "8.0.20-beta.0",
     "@void-cat/api": "^1.0.7",
     "bech32": "^2.0.0",
     "core-js": "^3.33.0",
@@ -41,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^12.3.1",
+    "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.4.3",
     "react-markdown": "^8.0.7",
     "react-markdown-editor-lite": "^1.3.4",
